# gplot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.txt
bin.Debug/: imgui.ini
bin.Release/: imgui.ini
cmake/: PlatformSetup.cmake  Utils.cmake
gplot-core/: CMakeLists.txt
gplot-core/include/Core/: Application.hpp  Camera.hpp  EventsHandler.hpp  Layer.hpp  Math.hpp  Window.hpp
gplot-core/include/Graphics/: FBO.hpp  Lines.hpp  Mesh.hpp  RenderCmd.hpp  RenderTypes.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  VertexBuffer.hpp
gplot-core/include/Plotting/: Plotting.hpp  PlottingTypes.hpp
gplot-core/src/Core/: Application.cpp  Camera.cpp  DriveIO.cpp  EventsHandler.cpp  Window.cpp
gplot-core/src/Graphics/: FBO.cpp  Lines.cpp  Mesh.cpp  Shader.cpp  Texture.cpp  VertexBuffer.cpp
gplot-core/src/Plotting/: Plotting.cpp
gplot-showcase/: CMakeLists.txt
gplot-showcase/include/: AppLayer.hpp  AppTypes.hpp  AppUtils.hpp
gplot-showcase/src/: AppLayer.cpp  main.cpp
resources/: 3d.frag.glsl  3d.vert.glsl  grid.frag.glsl  grid.geom.glsl  grid.vert.glsl  line.frag.glsl  line.geom.glsl  line.vert.glsl
src/: main.cpp
src/Core/: DriveIO.cpp  DriveIO.hpp  Types.hpp
src/Graphics/: Renderer.hpp  Shader.cpp  Shader.h  VertexBuffer.cpp  VertexBuffer.hpp
vendors/glad/: CMakeLists.txt
vendors/glad/include/glad/: glad.h  gles2.h
vendors/glad/src/: glad.c  gles2.c
vendors/glad/vc/: glad.vcxproj  glad.vcxproj.filters
vendors/glm/detail/: type_quat.hpp
vendors/imgui/: CMakeLists.txt  imgui.cpp
vendors/imgui/FileBrowser/: ImGuiFileBrowser.cpp
vendors/imgui/include/: imgui_styles.hpp
vendors/imgui/include/notify/: imgui_notify.h
vendors/imgui/src/: imgui_styles.cpp
vendors/imgui/src/notify/: extern.cpp
vendors/imgui/vc/: imgui.vcxproj
vendors/sdl/: CMakeLists.txt
vendors/sdl/android-project/app/src/main/java/org/libsdl/app/: SDLActivity.java
vendors/sdl/include/: SDL_config.h  SDL_config_linux.h  SDL_config_windows.h
vendors/sdl/src/audio/: SDL_audiocvt.c
vendors/sdl/src/core/android/: SDL_android.c
vendors/sdl/src/core/linux/: source_list.mak
vendors/sdl/src/dynapi/: SDL_dynapi.h
vendors/sdl/src/video/uikit/: SDL_uikitappdelegate.m  SDL_uikitviewcontroller.h  SDL_uikitviewcontroller.m
vendors/sdl/vc/: sdl.vcxproj  sdl.vcxproj.filters
