cmake_minimum_required(VERSION 3.15.0 FATAL_ERROR)

project(imgui C CXX)

file(GLOB_RECURSE IMGUI_SOURCES_SRC "${PROJECT_SOURCE_DIR}/src/*")
file(GLOB_RECURSE IMGUI_SOURCES_INCLUDE "${PROJECT_SOURCE_DIR}/include/*")
file(GLOB_RECURSE IMGUI_SOURCES_MISC_CPP "${PROJECT_SOURCE_DIR}/misc/cpp/*")

list(APPEND IMGUI_SOURCES "${IMGUI_SOURCES_SRC}")
list(APPEND IMGUI_SOURCES "${IMGUI_SOURCES_INCLUDE}")
list(APPEND IMGUI_SOURCES "${IMGUI_SOURCES_MISC_CPP}")

list(APPEND IMGUI_INCLUDES "${PROJECT_SOURCE_DIR}/include")
list(APPEND IMGUI_INCLUDES "${CMAKE_SOURCE_DIR}/vendors/sdl/include")

add_library(${PROJECT_NAME} STATIC ${IMGUI_SOURCES})
target_include_directories(${PROJECT_NAME} PRIVATE ${IMGUI_INCLUDES})
