cmake_minimum_required(VERSION 3.15.0 FATAL_ERROR)

project(imgui C CXX)

file(GLOB_RECURSE IMGUI_SOURCES_BACKENDS
    backends/imgui_impl_glfw.cpp
    backends/imgui_impl_opengl3.cpp
)

file(GLOB_RECURSE IMGUI_SOURCES_MISC_CPP "${PROJECT_SOURCE_DIR}/misc/cpp/*")
file(GLOB IMGUI_SOURCES_SRC "${PROJECT_SOURCE_DIR}/*.cpp" "${PROJECT_SOURCE_DIR}/*.hpp")

list(APPEND IMGUI_SOURCES "${IMGUI_SOURCES_SRC}")
list(APPEND IMGUI_SOURCES "${IMGUI_SOURCES_BACKENDS}")
list(APPEND IMGUI_SOURCES "${IMGUI_SOURCES_MISC_CPP}")

list(APPEND IMGUI_INCLUDES "${PROJECT_SOURCE_DIR}/include")

list(APPEND IMGUI_DEPENDENCIES glfw)

add_library(${PROJECT_NAME} STATIC ${IMGUI_SOURCES})

target_link_libraries(${PROJECT_NAME} PUBLIC ${IMGUI_DEPENDENCIES})
target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR})
